--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "update-mapbox": "npm install mapbox-gl @mapbox/mapbox-gl-geocoder --legacy-peer-deps"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.18.0",
     "@clerk/themes": "^2.2.36",
     "@hookform/resolvers": "^5.0.1",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-aspect-ratio": "^1.1.4",
@@ -49,12 +51,14 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.503.0",
+    "mapbox-gl": "^3.11.1",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "react-mapbox-gl": "^5.1.1",
     "react-resizable-panels": "^2.1.8",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
@@ -65,6 +69,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
