--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@radix-ui/react-toggle": "^1.1.6",
     "@radix-ui/react-toggle-group": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@tanstack/react-query": "^5.75.5",
+    "@tanstack/react-query-devtools": "^5.75.5",
     "@tanstack/react-table": "^8.21.3",
     "@types/dompurify": "^3.2.0",
     "axios": "^1.8.4",
